--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.2.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
