--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cookies-next": "^4.2.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.8.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
